--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "dotenv": "^16.3.1",
     "ds-test": "github:dapphub/ds-test",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
@@ -57,5 +56,26 @@
     "urql": "^3.0.3",
     "viem": "^1.12.1",
     "wagmi": "^1.4.2"
-  }
+  },
+  "description": "This project is a Next.js, TailwindCSS, TypeScript, Express, and Web3 application. It is designed to provide [Describe functionality here].",
+  "main": "next.config.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "dotenv": "^16.4.5",
+    "hardhat": "^2.22.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nio2004/zerofi-main.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/nio2004/zerofi-main/issues"
+  },
+  "homepage": "https://github.com/nio2004/zerofi-main#readme"
 }
