--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
+    "@google/generative-ai": "^0.14.0",
     "@lens-protocol/react": "^1.3.1",
     "@lens-protocol/react-web": "^1.3.1",
     "@lens-protocol/wagmi": "^2.1.1",
@@ -27,6 +28,7 @@
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@rainbow-me/rainbowkit": "^1.0.11",
+    "@reclaimprotocol/js-sdk": "^1.3.6",
     "@supabase/supabase-js": "^2.36.0",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
@@ -48,6 +50,7 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-qr-code": "^2.0.15",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
